--- a/webmanifest.json
+++ b/webmanifest.json
@@ -4,9 +4,9 @@
   "start_url": "index.php",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ],
   "background_color": "#1F1F1F",
