testing in progress -  12 MAR

--- a/webmanifest.json
+++ b/webmanifest.json
@@ -4,10 +4,15 @@
   "start_url": "index.php",
   "icons": [
     {
-      "src": "favicon.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    }
+		"src": "favicon.png",
+		"type": "image/png",
+		"sizes": "192x192"
+    },
+	{
+		"src": "/assets/images/favicon/android-chrome-512x512.png",
+		"sizes": "512x512",
+		"type": "image/png"
+	}
   ],
   "background_color": "#1F1F1F",
   "theme_color": "#464646",
